# Genesis

./: .gitignore  CMakeLists.txt
dependencies/glad/: glad.h
src/: config.h  glad.c  linear_algebruh.cpp  linear_algebruh.h  main.cpp  material.cpp  material.h  triangle_mesh.cpp  triangle_mesh.h
src/shaders/: fragment.txt  vertex.txt
